fix #252 : 将test代码中的Tab转为4个空格